--- a/Client-Project-main/Client WebApp/Views/Shared/_Layout.cshtml
+++ b/Client-Project-main/Client WebApp/Views/Shared/_Layout.cshtml
@@ -106,10 +106,10 @@
                         </a>
                         <div class="collapse" id="masterLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="#master">Bank</a>
+                                <a class="nav-link" href="@Url.Action("Index", "BankMaster")" ">Bank</a>
                                 <a class="nav-link" href="#master">User</a>
                                 <a class="nav-link" href="#master">Product</a>
-                                <a class="nav-link" href="#master">Sub Contractor</a>
+                                <a class="nav-link" href="@Url.Action("Index", "SubContractor")">Sub Contractor</a>
                             </nav>
                         </div>
 
