--- a/Client-Project-main/Client WebApp/Views/Shared/_Layout.cshtml
+++ b/Client-Project-main/Client WebApp/Views/Shared/_Layout.cshtml
@@ -107,7 +107,7 @@
                         <div class="collapse" id="masterLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
                                 <a class="nav-link" href="@Url.Action("Index", "Bank")">Bank</a>
-                                <a class="nav-link" href="#master">User</a>
+                                <a class="nav-link" href="@Url.Action("Index", "User")">User</a>
                                 <a class="nav-link" href="@Url.Action("Index", "Product")">Product</a>
                                 <a class="nav-link" href="@Url.Action("Index", "SubContractor")">Sub Contractor</a>
                             </nav>
