--- a/Client-Project-main/Client WebApp/Views/Shared/_Layout.cshtml
+++ b/Client-Project-main/Client WebApp/Views/Shared/_Layout.cshtml
@@ -92,9 +92,9 @@
                         </a>
                         <div class="collapse" id="configLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="#config">Company</a>
-                                <a class="nav-link" href="#config">Role</a>
-                                <a class="nav-link" href="#config">Role Access</a>
+                                <a class="nav-link" href="@Url.Action("Index", "Company")">Company</a>
+                                <a class="nav-link" href="@Url.Action("Index", "Role")">Role</a>
+                                <a class="nav-link" href="@Url.Action("Index", "RoleAccess")">Role Access</a>
                             </nav>
                         </div>
 
@@ -139,7 +139,7 @@
                             Payment
                         </a>
 
-                        <a class="nav-link" href="#add">
+                        <a class="nav-link" href="@Url.Action("Index", "AdditionalEntity")">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                             Additional Entity
                         </a>
