--- a/Client-Project-main/Client WebApp/Views/Shared/_Layout.cshtml
+++ b/Client-Project-main/Client WebApp/Views/Shared/_Layout.cshtml
@@ -79,8 +79,11 @@
                         </a>
                         <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="#super">Change Password</a>
-                                <a class="nav-link" href="#super">Send Email</a>
+                                <a class="nav-link" href="javascript:void(0)" onclick="openChangePasswordModal()">Change Password</a>
+                                <a class="nav-link" href="javascript:void(0)" onclick="openSendEmailModal()">Send Email</a>
+
+                                @* <a class="nav-link" href="#super">Change Password</a> *@
+                                @* <a class="nav-link" href="#super">Send Email</a> *@
                             </nav>
                         </div>
 
@@ -173,31 +176,11 @@
         </div>
     </div>
 
-    <!-- Delete Confirmation Modal -->
-     @* <div class="modal fade" id="deleteConfirmModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-         <div class="modal-dialog modal-dialog-centered">
-             <div class="modal-content border-danger">
-                 <div class="modal-header bg-danger text-white">
-                     <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
-                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
-                 </div>
-                 <div class="modal-body">
-                     Are you sure you want to delete?
-                 </div>
-                 <div class="modal-footer">
-                     <form id="deleteForm" asp-action="DeleteInvoice" method="post">
-                         @Html.AntiForgeryToken()
-                         <input type="hidden" id="deleteId" name="id" />
-                         <input type="hidden" name="companyId" value="@ViewBag.CompanyId"  />
-                         <input type="hidden" name="updatedBy" value="@ViewBag.UserId" />
-                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                         <button type="submit" class="btn btn-danger">Delete</button>
-                     </form>
-                 </div>
-             </div>
-         </div>
-     </div>
- *@
+    <!-- Change Password Modal -->
+    <div id="changePasswordContainer"></div>
+
+    <!-- Send Email Modal Container -->
+    <div id="sendEmailContainer"></div>
 
     <!-- Generic Delete Confirmation Modal -->
     <div class="modal fade" id="deleteConfirmModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
@@ -221,7 +204,6 @@
             </div>
         </div>
     </div>
-
 
     <!-- Toaster Message -->
     @if (TempData["SuccessMessage"] != null || TempData["ErrorMessage"] != null)
@@ -428,6 +410,25 @@
             // Generate Excel file and trigger download
             XLSX.writeFile(wb, fileName);
         }
+
+        function openChangePasswordModal() {
+            $.get('/User/ChangeUserPassword', function (data) {
+                $('#changePasswordContainer').html(data);
+                $('#change-password-modal').modal('show');
+            }).fail(function () {
+                alert("Failed to load Change Password form.");
+            });
+        }
+
+        function openSendEmailModal() {
+            $.get('/User/SendEmail', function (data) {
+                $('#sendEmailContainer').html(data);
+                $('#send-email-modal').modal('show');
+            }).fail(function () {
+                alert("Failed to load Send Email form.");
+            });
+        }
+
     </script>
 </body>
 </html>
