Completed 3 module from Report section

--- a/Client-Project-main/Client WebApp/Views/Home/Index.cshtml
+++ b/Client-Project-main/Client WebApp/Views/Home/Index.cshtml
@@ -10,31 +10,31 @@
     {
         <div class="card m-3" style="width: 18rem;">
             <div class="card-body">
-                <a asp-controller="Reports" asp-action="Paid">Paid Report <i class="fa-solid fa-file-zipper icon"></i></a>
+                <a asp-controller="Report" asp-action="Paid">Paid Report <i class="fa-solid fa-file-zipper icon"></i></a>
             </div>
         </div>
 
         <div class="card m-3" style="width: 18rem;">
             <div class="card-body">
-                <a asp-controller="Reports" asp-action="Unpaid">Unpaid Report <i class="fa-solid fa-file-zipper icon"></i></a>
+                <a asp-controller="Report" asp-action="Unpaid">Unpaid Report <i class="fa-solid fa-file-zipper icon"></i></a>
             </div>
         </div>
 
         <div class="card m-3" style="width: 18rem;">
             <div class="card-body">
-                <a asp-controller="Reports" asp-action="ProductWise">Product Wise Report <i class="fa-solid fa-file-zipper icon"></i></a>
+                <a asp-controller="Report" asp-action="ProductWise">Product Wise Report <i class="fa-solid fa-file-zipper icon"></i></a>
             </div>
         </div>
 
         <div class="card m-3" style="width: 18rem;">
             <div class="card-body">
-                <a asp-controller="Reports" asp-action="SubContractorWise">Sub-Contractor Wise Report <i class="fa-solid fa-file-zipper icon"></i></a>
+                <a asp-controller="Report" asp-action="SubContractorWise">Sub-Contractor Wise Report <i class="fa-solid fa-file-zipper icon"></i></a>
             </div>
         </div>
 
         <div class="card m-3" style="width: 18rem;">
             <div class="card-body">
-                <a asp-controller="Reports" asp-action="CombinedEntity">Combined Sub-Contractor Entity Report <i class="fa-solid fa-file-zipper icon"></i></a>
+                <a asp-controller="Report" asp-action="CombinedSubContractorEntity">Combined Sub-Contractor Entity Report <i class="fa-solid fa-file-zipper icon"></i></a>
             </div>
         </div>
     }
