--- a/Client-Project-main/Client WebApp/Views/Shared/_Layout.cshtml
+++ b/Client-Project-main/Client WebApp/Views/Shared/_Layout.cshtml
@@ -126,9 +126,9 @@
                             <nav class="sb-sidenav-menu-nested nav">
                                 <a class="nav-link" href="#reports">Paid</a>
                                 <a class="nav-link" href="#reports">Un-Paid</a>
-                                <a class="nav-link" href="#reports">Product Wise</a>
-                                <a class="nav-link" href="#reports">Sub-Contractor Wise</a>
-                                <a class="nav-link" href="#reports">Combined Sub-Contractor Entity Report</a>
+                                <a class="nav-link" href="@Url.Action("ProductWise", "Report")">Product Wise</a>
+                                <a class="nav-link" href="@Url.Action("SubContractorWise", "Report")">Sub-Contractor Wise</a>
+                                <a class="nav-link" href="@Url.Action("CombinedSubContractorEntity", "Report")">Combined Sub-Contractor Entity Report</a>
                             </nav>
                         </div>
 
