Done with Report module

--- a/Client-Project-main/Client WebApp/Views/Shared/_Layout.cshtml
+++ b/Client-Project-main/Client WebApp/Views/Shared/_Layout.cshtml
@@ -124,8 +124,8 @@
                         </a>
                         <div class="collapse" id="reportLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="#reports">Paid</a>
-                                <a class="nav-link" href="#reports">Un-Paid</a>
+                                <a class="nav-link" href="@Url.Action("Paid", "Report")">Paid</a>
+                                <a class="nav-link" href="@Url.Action("Unpaid", "Report")">Un-Paid</a>
                                 <a class="nav-link" href="@Url.Action("ProductWise", "Report")">Product Wise</a>
                                 <a class="nav-link" href="@Url.Action("SubContractorWise", "Report")">Sub-Contractor Wise</a>
                                 <a class="nav-link" href="@Url.Action("CombinedSubContractorEntity", "Report")">Combined Sub-Contractor Entity Report</a>
