--- a/Client-Project-main/Client WebApp/Views/Payment/Index.cshtml
+++ b/Client-Project-main/Client WebApp/Views/Payment/Index.cshtml
@@ -3,20 +3,22 @@
     ViewData["Title"] = "Payments";
 }
 
-<h2 class="pt-4 fs-1">Payments</h2>
+@* <h2 class="pt-4 fs-1">Payments</h2> *@
 
 <div class="">
 
     <!-- Add / Export Buttons -->
-    <button class="btn btn-outline-primary mb-2" data-bs-toggle="modal" data-bs-target="#payment-modal" onclick="setModalMode('add')">
-        <i class="fa-solid fa-plus"></i> Add
-    </button>
-    <button class="btn btn-outline-danger mb-2" onclick="exportToPdf()">
-        <i class="fa-solid fa-file-pdf"></i> Export PDF
-    </button>
-    <button class="btn btn-outline-success mb-2" onclick="exportToExcel()">
-        <i class="fa-solid fa-file-excel"></i> Export Excel
-    </button>
+    <div class="my-3">
+        <button class="btn btn-outline-primary mb-2" data-bs-toggle="modal" data-bs-target="#payment-modal" onclick="setModalMode('add')">
+            <i class="fa-solid fa-plus"></i> Add
+        </button>
+        <button class="btn btn-outline-danger mb-2" onclick="exportToPdf()">
+            <i class="fa-solid fa-file-pdf"></i> Export PDF
+        </button>
+        <button class="btn btn-outline-success mb-2" onclick="exportToExcel()">
+            <i class="fa-solid fa-file-excel"></i> Export Excel
+        </button>
+    </div>
 
     <!-- Filters -->
     <div class="card mb-2">
@@ -86,7 +88,7 @@
                             <tr data-payment-id="@payment.Id">
                                 <td>@payment.Id</td>
                                 <td>@payment.InvoiceNo</td>
-                                <td>
+                                <td class="text-end">
                                     @(payment.DurationType == "day"
                                         ? payment.PaymentDate?.ToString("dd-MMM-yy")
                                         : $"{payment.FromDate?.ToString("dd-MMM-yy")} - {payment.ToDate?.ToString("dd-MMM-yy")}")
