--- a/Client-Project-main/Client WebApp/Views/Role/Index.cshtml
+++ b/Client-Project-main/Client WebApp/Views/Role/Index.cshtml
@@ -3,23 +3,23 @@
     ViewData["Title"] = "Role";
 }
 
-<h2 class="pt-4 fs-1">Role Master</h2>
+@* <h2 class="pt-4 fs-1">Role Master</h2> *@
 
 <div class="">
     <!-- Add / Export Buttons -->
-    <button class="btn btn-outline-primary mb-2" data-bs-toggle="modal" data-bs-target="#role-modal" onclick="setModalMode('add')">
-        <i class="fa-solid fa-plus"></i> Add
-    </button>
+    <div class="my-3">
+        <button class="btn btn-outline-primary mb-2" data-bs-toggle="modal" data-bs-target="#role-modal" onclick="setModalMode('add')">
+            <i class="fa-solid fa-plus"></i> Add
+        </button>
 
-    <button class="btn btn-outline-danger mb-2" onclick="exportToPdf()">
-        <i class="fa-solid fa-file-pdf"></i> Export PDF
-    </button>
-    <button class="btn btn-outline-success mb-2" onclick="exportToExcel()">
-        <i class="fa-solid fa-file-excel"></i> Export Excel
-    </button>
-
+        <button class="btn btn-outline-danger mb-2" onclick="exportToPdf()">
+            <i class="fa-solid fa-file-pdf"></i> Export PDF
+        </button>
+        <button class="btn btn-outline-success mb-2" onclick="exportToExcel()">
+            <i class="fa-solid fa-file-excel"></i> Export Excel
+        </button>
+    </div>
    
-
     <!-- Modal -->
     <div class="modal fade" id="role-modal" tabindex="-1" aria-labelledby="roleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
         <div class="modal-dialog modal-lg modal-dialog-scrollable">
