--- a/Client-Project-main/Client WebApp/Views/Report/CombinedSubContractorEntity.cshtml
+++ b/Client-Project-main/Client WebApp/Views/Report/CombinedSubContractorEntity.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Combined Sub-Contractor Entity";
 }
 
-<h2 class="pt-4 fs-1">Combined Sub-Contractor Entity Reports</h2>
+@* <h2 class="pt-4 fs-1">Combined Sub-Contractor Entity Reports</h2> *@
 
 <div class="">
 
