--- a/Client-Project-main/Client WebApp/Views/Report/ProductWise.cshtml
+++ b/Client-Project-main/Client WebApp/Views/Report/ProductWise.cshtml
@@ -5,14 +5,18 @@
     ViewData["Title"] = "Product Wise";
 }
 
-<h2 class="pt-4 fs-1">Product Wise Reports</h2>
+@* <h2 class="pt-4 fs-1">Product Wise Reports</h2> *@
 
 <div class="pt-3 px-3 pb-2">
 
     <!-- Export Buttons -->
     <div class="mb-3">
-        <button class="btn btn-outline-danger mb-2" onclick="exportToPdf()">Print to PDF</button>
-        <button class="btn btn-outline-success mb-2" onclick="exportToExcel()">Print to Excel</button>
+        <button class="btn btn-outline-danger mb-2" onclick="exportToPdf()">
+            <i class="fa-solid fa-file-pdf"></i> Export PDF
+        </button>
+        <button class="btn btn-outline-success mb-2" onclick="exportToExcel()">
+            <i class="fa-solid fa-file-excel"></i> Export Excel
+        </button>
         <button class="btn btn-outline-primary mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#filter-container">
             Filters <i class="fa-solid fa-angle-down"></i>
         </button>
