--- a/Client-Project-main/Client WebApp/Views/Report/SubContractorWise.cshtml
+++ b/Client-Project-main/Client WebApp/Views/Report/SubContractorWise.cshtml
@@ -5,14 +5,18 @@
     ViewData["Title"] = "Sub-Contractor Wise";
 }
 
-<h2 class="pt-4 fs-1">Sub-Contractor Wise Reports</h2>
+@* <h2 class="pt-4 fs-1">Sub-Contractor Wise Reports</h2> *@
 
 <div class="pt-3 px-3 pb-2">
 
     <!-- Export Buttons -->
     <div class="mb-3">
-        <button class="btn btn-outline-danger mb-2" onclick="exportToPdf()">Print to PDF</button>
-        <button class="btn btn-outline-success mb-2" onclick="exportToExcel()">Print to Excel</button>
+        <button class="btn btn-outline-danger mb-2" onclick="exportToPdf()">
+            <i class="fa-solid fa-file-pdf"></i> Export PDF
+        </button>
+        <button class="btn btn-outline-success mb-2" onclick="exportToExcel()">
+            <i class="fa-solid fa-file-excel"></i> Export Excel
+        </button>
         <button class="btn btn-outline-primary mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#filter-container">
             Filters <i class="fa-solid fa-angle-down"></i>
         </button>
@@ -23,19 +27,19 @@
         <div class="card-body collapse" id="filter-container">
             <form method="get" class="row g-3">
                 <div class="col-md-3">
-                    <label>From Date</label>
+                    <label class="form-label">From Date</label>
                     <input type="date" name="fromDate" class="form-control" value="@(ViewContext.HttpContext.Request.Query["fromDate"])" />
                 </div>
                 <div class="col-md-3">
-                    <label>To Date</label>
+                    <label class="form-label">To Date</label>
                     <input type="date" name="toDate" class="form-control" value="@(ViewContext.HttpContext.Request.Query["toDate"])" />
                 </div>
                 <div class="col-md-3">
-                    <label>Sub-Contractor Name</label>
+                    <label class="form-label">Sub-Contractor Name</label>
                     <input type="text" name="subcontractorName" class="form-control" value="@(ViewContext.HttpContext.Request.Query["subcontractorName"])" />
                 </div>
-                <div class="col-md-3 align-self-end">
-                    <button type="submit" class="btn btn-outline-primary mb-2">Search</button>
+                <div class="col-md-3 mt-5">
+                    <button type="submit" class="btn btn-outline-primary mb-2 me-2">Search</button>
                     <a href="@Url.Action("SubContractorWise")" class="btn btn-outline-secondary mb-2">Reset</a>
                 </div>
             </form>
