--- a/Client-Project-main/Client WebApp/Views/Report/Unpaid.cshtml
+++ b/Client-Project-main/Client WebApp/Views/Report/Unpaid.cshtml
@@ -5,20 +5,20 @@
     ViewData["Title"] = "Unpaid";
 }
 
-<h2 class="pt-4 fs-1">Unpaid Reports</h2>
+@* <h2 class="pt-4 fs-1">Unpaid Reports</h2> *@
 
 <div class="pt-3 px-3 pb-2">
 
     <!-- Export Buttons -->
     <div class="mb-3">
         <button class="btn btn-outline-danger mb-2" onclick="exportToPdf()">
-            <i class="bi bi-file-earmark-pdf"></i> Print to PDF
+            <i class="fa-solid fa-file-pdf"></i> Export PDF
         </button>
-        <button class="btn btn-outline-success mb-2 ms-2" onclick="exportToExcel()">
-            <i class="bi bi-file-earmark-excel"></i> Print to Excel
+        <button class="btn btn-outline-success mb-2" onclick="exportToExcel()">
+            <i class="fa-solid fa-file-excel"></i> Export Excel
         </button>
-        <button class="btn btn-outline-primary mb-2 ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#filter-container">
-            Filters <i class="bi bi-chevron-down"></i>
+        <button class="btn btn-outline-primary mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#filter-container">
+            Filters <i class="fa-solid fa-angle-down"></i>
         </button>
     </div>
 
@@ -38,7 +38,7 @@
                     <label class="form-label">Sub-Contractor Name</label>
                     <input type="text" name="subcontractorName" class="form-control" placeholder="Sub-Contractor Name" value="@(ViewContext.HttpContext.Request.Query["subcontractorName"])" />
                 </div>
-                <div class="col-md-12 mt-2">
+                <div class="col-md-3 mt-5">
                     <button type="submit" class="btn btn-outline-primary mb-2 me-2">Search</button>
                     <a asp-action="Unpaid" class="btn btn-outline-secondary mb-2">Reset</a>
                 </div>
